# rano

./: Cargo.toml  README.md  agenda.txt  test.txt
src/: colors.rs  config-file-spec.txt  config.rs  gap_buffer.rs  gapnc.rs  interval_tree.rs  line_gap.rs  lines.rs  main.rs  nc.rs  syntax_highlighting.rs  syntax_highlighting_demo.rs  undo.rs
src/legacy/: nc.rs  readme.txt
