[package]
name = "rano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = { version="6.0.0", features=["wide", "wide_chtype"] }
#ncurses = { version="6.0.0", features=["wide"] }
generational-arena = "0.2"
regex = "1.10.4"
petgraph = "0.6.5"
intervaltree = "0.2.7"

#[features]
#wide = []
